[tool.poetry]
authors = ["Vlad Shmyhlo <aion.stu@gmail.com>"]
description = ""
name = "flambeau"
version = "0.1.0"

[tool.poetry.dependencies]
numpy = "^1.22.4"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipython = "^8.4.0"
isort = "^5.10.1"
jupyterlab = "^3.4.3"

[tool.isort]
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
